Fix form group icon spacing

--- a/Responsive Web Design/Survey Form/styles.css
+++ b/Responsive Web Design/Survey Form/styles.css
@@ -439,6 +439,11 @@ main {
   align-items: baseline;
 }
 
+.form-input-group-icon {
+  position: relative;
+  top: 0.15rem
+}
+
 .form-input-group {
   /* Box-model */
   display: flex;
@@ -483,4 +488,5 @@ main {
 }
 
 .form-submit-button:hover {
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;}
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
